<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PIC-CHE</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Check for new phrases</string>
    <string name="pic_desc">Picture of the phrase</string>
    <string name="arrow_desc">Navigation arrow</string>
    <string name="hokkien">Hokkien: </string>
    <string name="cantonese">Cantonese: </string>
    <string name="chinese">中文: </string>
    <string name="english">English: </string>
    <string name="play_all">Play All</string>
    <string name="title_activity_phrase">Phrase</string>
    <string name="self_phrase_title">New Phrase</string>
    <string name="self_add_phrase">Add new Phrase</string>

    <color name="P50">#e5fde0dc</color>
    <color name="P100">#f9bdbb</color>
    <color name="P200">#f69988</color>
    <color name="P300">#f36c60</color>
    <color name="P400">#e84e40</color>
    <color name="P500">#e51c23</color>
    <color name="P600">#dd191d</color>
    <color name="P700">#d01716</color>
    <color name="P800">#c41411</color>
    <color name="P900">#b0120a</color>

    <color name="white">#FFFFFF</color>
    <color name="black">#000000</color>

    <string name="title_activity_new_phrase">New Phrase</string>

</resources>
