<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/list_height"
    android:background="@color/P50"
    android:padding="6dip">
    
    <ImageView
        android:id="@+id/listImage"
        android:layout_width="130dip"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_marginRight="6dip"
        android:contentDescription="@string/pic_desc"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/hokkien"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/listImage"
        android:layout_toRightOf="@id/listImage"
        android:text="@string/hokkien"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/cantonese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/hokkien"
        android:layout_below="@id/hokkien"
        android:text="@string/cantonese"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/chinese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/cantonese"
        android:layout_below="@id/cantonese"
        android:text="@string/chinese"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/english"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/chinese"
        android:layout_below="@id/chinese"
        android:text="@string/english"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/imageArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/arrow_desc"
        android:src="@drawable/ic_action_next_item" />

</RelativeLayout>